# data_engineer_training_psu

./: .gitignore  README.md
Slide-Presentation-PDF/: Employee2.inventory.json  jobscheduling.ipynb  mongodb-python.ipynb  rand.py  สำเนาของ test-mysql-connector.ipynb
day1-2/: 03 การรันงานแบบขนาน.md
day3/: mongodb-python.ipynb  mongodb.md  mongodb_works.md  mysql_works.md  test-mongodb-connector.ipynb  test-mysql-connector.ipynb
day4/: command_lines.md
day4/ETL/: etl_example.py  my_1st_dag.py  my_3rd_dag.py  n8n.md
day4/ETL/airflow/dags/: my_1st_dag.py  my_3rd_dag.py  read_data.py  web_project.PY
day4/ETL/n8n/: config  database.sqlite
day4/source/: my_2nd_dag.py
day5/: README.md
day5/cloud/: .env  Dockerfile  docker-compose.yml
day5/cloud/code/: pyproject.toml
day5/cloud/code/psu_de/: acquisition.py  dashapp.py  models.py
day5/local/: Dockerfile  docker-compose.yml
day5/local/code/: hosts
day5/local/code/playbooks/: backup-mongodb.yml  hello-world.yml
project/: generate_web_log.py  generate_web_log2.py  mongodb_test.py  sample_web_logs.txt  simple_etl_runner.py
